<resources>
    <string name="app_name">Choobid</string>
    <string name="Terms">شرایط و قوانین را مطالعه نموده و با آن موافقم.</string>
    <string name="endTime">حراج تمام شده است</string>
    <string name="basePrice">قیمت پایه : </string>
    <string name="buyPrice">خرید از فروشگاه : %b تومان</string>
    <string name="loginServerError">مشکل در بر قراری ارتباط با سرور</string>
    <string name="loginPassError">رمز عبور اشتباه است</string>
    <string name="loginEmailError">ایمیل وارد شده اشتباه است</string>
    <string name="EmailError">ایمیل وارد شده ثبت شده است.</string>
    <string name="loginOk">ورود با موفقیت انجام شد</string>
    <string name="SecurityCode_not_match">کد فعالسازی وارد شده صحیح نمی باشد</string>
    <string name="all_fields_required">لطفا تمام فیلد ها را پر کنید</string>
    <string name="password_repassword_not_match">کلمه عبور و تکرار کلمه عبور یکسان نمی باشد</string>
    <string name="mobile_must_have_11_number">شماره موبایل می بایست 11 رقم داشته باشد</string>
    <string name="loginNameError">نام کاربری قبلا ثبت شده است</string>
    <string name="loginNumError">حساب کاربری دیگری با این شماره موبایل ثبت شده است</string>
    <string name="agreeTerms">پذیرش شرایط و قوانین چوبید ضروری است</string>
    <string name="loading">در حال بارگذاری ...</string>
    <string name="name">نام کاربری</string>
    <string name="screenName">نام کاربری</string>
    <string name="email">ایمیل</string>
    <string name="changePass">تغییر رمز عبور</string>
    <string name="sPrice">قیمت شگفت انگیز : </string>
    <string name="bPrice">قیمت حراجی :</string>
    <string name="btime">تاریخ و ساعت حراجی :</string>
    <string name="mPrice">قیمت بازار :</string>
    <string name="bidPT">هر پیشنهاد :</string>
    <string name="aPriceT">افزایش قیمت :</string>
    <string name="cod">کد : %s</string>
    <string name="baseP">قیمت پایه: %s تومان</string>
    <string name="buyP">خرید: %s تومان</string>
    <string name="toman">%s تومان</string>
    <string name="myBid">اعتبار بید %s</string>
    <string name="myChoob">اعتبار چوب  %s</string>
    <string name="myGiftBid">اعتبار بید هدیه  %s</string>
    <string name="bid">%s بید</string>
    <string name="botInfo">از %1$s تا %2$s تعداد بید %3$s </string>
    <string name="enterBid">ورودی حراجی : %s بید</string>
    <string name="enterChoob">ورودی حراجی : %s چوب</string>
    <string name="choobid">چوبید</string>
    <string name="noBid">موجودی بید کافی نیست !</string>
    <string name="updateText">نسخه جدید نرم افزار چوبید منتشر شد.\nجهت استفاده از نرم افزار آن را به روز رسانی نمایید.</string>
    <string name="buyBid">خرید بید</string>
    <string name="cancel">انصراف</string>
    <string name="BidToGiftBidPercent">بید هدیه</string>
    <string name="SpecialPriceToBidNth">انتقال قیمت جادویی</string>
    <string name="MoneyToWinnerPercent">پرداخت معادل ریالی محصول به برنده</string>
    <string name="GiftBidToWinnerPercent">تبدیل محصول برنده شده به بید هدیه</string>
    <string name="AvoidWinnerToBidNth">محدودیت شرکت برندگان</string>
    <string name="BidToCharityPercent">کمک به خیریه</string>
    <string name="getNo2DiscountPercent">تخفیف ویژه نفرات دوم تا پنجم حراجی</string>
    <string name="EntrancePrice">دریافت ورودیه در حراجی های ویژه</string>
    <string name="BidToGiftBidPercentText">اولین امتیاز ویژه ای که چوبید در برخي از حراجی ها به کاربران خود می دهد تبدیل اعتبار بید مصرفی به بید هدیه می باشد. در واقع خریدارانی که موفق به خرید از حراجی نشده اند می توانند بید های مصرفی خود را به تناسب ذیل به بید هدیه تبدیل نمایند. معادل 30% بید مصرفی به اعتبار بید هدیه تبدیل می گردد.</string>
    <string name="SpecialPriceToBidNthText">به منظور ایجاد امکان بیشتر برای شما خریداران چوبیدی امتیاز انتقال قیمت جادویی در برخی از حراجی ها فعال می گردد. همانطور که می دانید خریدارانی که در حراجی برنده نشده اند می توانند  با احتساب مقدار ریالی بیدهای مصرفی با قیمت شگفت انگيز اقدام به خرید كالا نمایند این قانون در همه حراجی های سایت تا 72 ساعت بعد از اتمام حراجی كالا مورد نظر قابل انجام می باشد . ولی چوبید برای خریداران خود در برخی از حراجی های خاص امتیاز ویژه ای قائل شده است . این امتیاز در واقع انتقال قیمت شگفت انگيز تا 2 حراجی آینده آن كالا می باشد . به صورتی که خریداران می توانند بعد از اتمام سومین حراجی پی در پی از یک كالا خاص با احتساب مقدار ریالی بید مصرفی خود در طی این 3 حراجی اقدام به خرید كالا از فروشگاه شگفت انگيز نمایند .</string>
    <string name="MoneyToWinnerPercentText">یکی دیگر از امتیازات ویژه چوبید در ترفند ها، امکان پرداخت معادل ریالی كالا به برنده می باشد . این امتیاز ویژه که در برخی از حراجی ها فعال می گردد با فرمول ذیل محاسبه می شود. ( قیمت نهایی حراجی– قیمت بازار كالا ) / 2</string>
    <string name="MaxAccountNo">محدودیت شرکت کنندگان در حراجی</string>
    <string name="MaxAccountNoText">از ترفند های خاص و جذاب چوبید می توان به محدود کردن تعداد شرکت کنندگان در برخی از حراجی ها با هدف ایجاد رقابت واقعی بین خریداران واقعی كالا اشاره کرد . این ترفند بنا بر تعداد مشخص شده روی آیکن مورد نظر بعد از شرکت اولین خریدار فعال شده و به نوبت طی هر پیشنهاد از خریدارانی که به تازگی وارد حراجی می شوند تعداد مجاز شرکت کنندگان کم شده و با پیشنهاد آخرین خریدار فقط خریدارانی که تا این لحظه وارد حراجی شده باشند اجازه شرکت در ادامه حراجی را خواهند داشت و بیشتر از تعداد مشخص شده اجازه ورود به حراجی داده نمی شود .</string>
    <string name="useHelp">چوبید به عنوان فروشگاه اینترنتی تلاش می نماید که هیجان رقابت در یک خرید شگفت انگیز را با شرکت کاربران در حراجی آنلاین فراهم آورد . درواقع خریداران با شرکت در حراجی های چوبید بعد از تجربه یک رقابت هیجان انگیز در صورت برنده شدن، با تخفیفی استثنائی از فروشگاه چوبید خرید می نمایند و در صورتی که در رقابت حراجی موفق نباشند ، می توانند با احتساب اعتبار بید های مصرفی در آن حراجی، با قیمتی شگفت انگیز اقدام به خریدکالا نمایند.  چوبید در قسمت ترفندها امتیازات ویژه ای را برای کاربران خود قائل شده است که شما کاربران عزیز را به مطالعه آن دعوت می نماید.</string>
    <string name="registerHelp">ثبت نام  در چوبید دارای دو مرحله است. شما می توانید با کلیک بر روی گزینه ثبت نام این مراحل را آغاز نمایید.\n\n- در مرحله اول مشخصات کلی همانند نام کاربری،شماره موبایل و رمز عبور از شما دریافت می گردد.با توجه به عدم امکان تغییر شماره موبایل و نام کاریری در انتخاب آن دقت نمایید. لطفا در این مرحله قوانین و مقررات سایت را مطالعه و موافقت خود را با آن اعلام نمایید. \n\n- در مرحله دوم یک پیامک حاوی کد فعالسازی برای شما ارسال می شود. با وارد نمودن این کد مراحل ثبت نام اولیه شما تکمیل و حساب کاربری شما فعال می گردد. بعد از این مرحله شما می توانید وارد شوید. \n نکته مهم:در صورتی که پیامک از پنل 50001131 برای شما ارسال نگردید به منظور دریافت پیامک های بعدی چوبید از طریق زیر اقدام نمایید. \nمشترکین همراه اول: ارسال عدد 2 به 8999\nمشترکین ایرانسل: ارسال عدد 1 به 50005</string>
    <string name="loginHelp">- بعد از ثبت نام اولیه با تکمیل مشخصات \"پرونده من\" شما 20 بید هدیه دریافت می کنید. \n- در صورت داشتن معرف با وارد نمودن کد معرف 20 بید هدیه برای شما و 50 بید هدیه برای معرف شما شارژ می گردد.لینک وارد نمودن کد معرف تا 24 ساعت از زمان ثبت نام برای شما فعال است.</string>
    <string name="timeHelp">- شما می توانید با فعال نمودن \"یادآوری زمان شروع\" در صفحه حراجی نیم ساعت قبل از آغاز حراجی پیام یادآوری دریافت نمایید.</string>
    <string name="buyBidHelp">- با مراجعه به قسمت \"خرید بید\" در پنل کاربری و خرید بسته بید مورد نظر آماده شرکت در حراجی شوید.</string>
    <string name="enterBidHelp">- به ترفندهای فعال در این حراجی دقت کنید.برای آشنایی با جزییات عملکرد  ترفندها به صفحه نکته ها و ترفندها مراجعه کنید.</string>
    <string name="clickBidHelp">- با کلیلک بر روی پیشنهاد ،قیمت پایه به میزان مشخص شده در اطلاعات حراجی بالا رفته و از بیدهای شما به میزان مشخص شده کسر می گردد.همزمان قیمت شگفت انگیز برای شما بر مبنای ارزش واقعی بید مصرفی کاهش می یابد. \n)فرصت پیشنهاد دادن برای کاربران بعد از هر پیشنهاد 10 ثانیه می باد( \nدر صورت عدم پیشنهاد در 10 ثانیه توسط کاربران دیگر ، کاربری که آخرین پیشنهاد را ثبت کرده برنده حراجی می باشد. / اعلام برنده حراجی</string>
    <string name="winnerHelp">7- وارد  \"حراجی های من \" در پنل کاربری خود شوید.  \n8- با کلیک بر روی  دریافت کد تخفف در حراجی مورد نظر ،کد تخفیف حراجی برنده شده را دریافت نموده و کپی نمایید. ( شما تا 72 ساعت بعد از پایان حراجی جهت دریافت کد تخفیف فرصت دارید)   \n9- وارد فروشگاه انلاین چوبید شوید و مراحل خرید کالای مورد نظر را آغاز نماییید.  \n- با وارد نمودن کد تخفیف در زمان خرید محصول قیمت برای شما مطابق با قیمت نهایی حراجی تغییر می کنید.  \n10- اطلاعات ارسال را تکمیل و مبلغ فاکتور را پرداخت نمایید.  \n- کاربران تهرانی امکان انتخاب گزینه پرداخت در محل را دارند.  \n11- کالا ظرف مدت 72 ساعت برای شما ارسال می گردد.</string>
    <string name="payHelp">9- انتخاب دریافت ارزش ریالی کالا با فرمول (قیمت برنده – قیمت کالا)/2 از قسمت حراجی های من \n10- ارسال تیکت از پشتیبانی سایت برای خریدار و دریافت شماره کارت و مشخصات \n11- واریز مبلغ مورد توافق به حساب کاربر \n12- ارسال تیکت رسید مبلغ پرداختی توسط پشتیبانی سایت</string>
    <string name="pay2Help">7- وارد  \"حراجی های من \" در پنل کاربری خود شوید.  \n8- با کلیک بر روی  دریافت کد تخفیف در حراجی مورد نظر ،کد تخفیف خرید شگفت انگیز را دریافت نموده و کپی نمایید. ( شما تا 72 ساعت بعد از پایان حراجی جهت دریافت کد تخفیف فرصت دارید)  \n9- وارد فروشگاه انلاین چوبید شوید و مراحل خرید کالای مورد نظر را آغاز نماییید.  \n- با وارد نمودن کد تخفیف در زمان خرید محصول قیمت برای شما مطابق با قیمت شگفت انگیز تغییر می کنید.  \n10- اطلاعات ارسال را تکمیل و مبلغ فاکتور را پرداخت نمایید.  \n- کاربران تهرانی امکان انتخاب گزینه پرداخت در محل را دارند.  \n11- کالا ظرف مدت 72 ساعت برای شما ارسال می گردد. \nتوجه: در صورت دریافت کد تخفیف خرید شگفت انگیز امکان دریافت بید هدیه( در صرت فعال بودن این ترفند) برای شما امکانپذیر نیست.</string>
    <string name="pay3Help">یکی از امتیازات ویژه ای که چوبید برای کاربرانی که در حراجی برنده نشده اند و نیز تمایلی به خرید کالا با قیمت شگفت انگیز ندارند، عودت وجه بیدهای مصرفی در حراجی می باشد. کاربرانی که تقاضای عودت وجه را دارند می بایست با ارسال تیکت \"عودت وجه  و بستن حساب کاربری\" درخواست خود را برای سایت ارسال نمایند. چوبید بعد از دریافت این تیکت، صورتحساب کاربر را بر مبنای روند ذیل صادر می نماید.  \nدر صورتحساب صادره  بیدهای مصرفی در حراجی ( به غیر از بیدهای هدیه سایت )، معادل ریالی آن ( هر بید 100 تومان )، چوب حراجی ( هزینه برگزاری حراجی )، معادل ریالی چوب حراجی ( هر چوب 1000 تومان ) مشخص شده و مابه التفاوت معادل ریالی بیدهای مصرفی و چوب های حراجی محاسبه می گردد.  \nلازم به توضیح است که در صورت شرکت کاربر در حراجی های مختلف، این روند برای هر حراجی محاسبه و تراز ریالی مبنای عودت وجه خواهد بود.</string>
    <string name="exHelp">حراجی گوشي موبايل اپل مدل iphone 7  \nقیمت بازار : تومان ٣,١٠٠,٠٠٠  \nقیمت پایه: ٤٠٠,٠٠٠ تومان  \nافزایش قیمت:  ٥٠ تومان  \nهر پیشنهاد : ٢٠ بید  \nبا شروع حراجی( رسیدن تایمر به ده ثانیه) قیمت حراجی از قیمت پایه (400.000 تومان) آغاز می شود . با هر بار کلیلک بر روی گزینه پیشنهاد قیمت پایه به مقدار افزایش قیمت مشخص شده (50 تومان)افزایش یافته برای مثال با پیشنهاد اول، قیمت حراجی به عدد (400.050 افزایش می یابد و از اعتبار بیدهای شما معادل هر پیشنهاد (20 بید) کسر می گردد. همزمان معادل ارزش این بیدها (هر بید 100 تومان) از قیمت شگفت انگیز شما کسر می گردد.(در ابتدا قیمت شگفت انگیز معادل قیمت بازار است و با اولین پیشنهاد به عدد 3.098.000 تومان تغییر می کند.اگر تایمر به عدد صفر برسد و کسی پیشنهاد جدید نداده باشد حراجی پایان یافته و آخرین پیشنهاد دهنده به عنوان برنده اعلام می گردد.بقیه شرکت کنندگان هم  می توانند  با قیمت شگفت انگیزخود  اقدام به خریدکالا نمایند و یا اگر تمایل به خرید شگفت انگیز ندارند بعد از چندین بار شرکت در حراجی های چوبید در صورت تمایل می توانند با ارسال تیکت \"عودت وجه و بستن حساب کاربری\" ضمن دریافت صورتحساب عملکردشان در سایت ، مبلغ مابه التفاوت بیدهای خریداری شده و چوب های حراجی ها را دریافت نمایند.</string>
    <string name="youWinBid">شما برنده این مزایده شده اید.</string>
    <string name="youCanBuy">با دریافت کد تخفیف از این قسمت می توانید در فروشگاه این کالا را با قیمت برنده شده در مزایده خریداری نمایید.</string>
    <string name="getDiscountCode">دریافت کد حراجی</string>
    <string name="youSpecialPriceCode">دریافت کد تخفیف قیمت شگفت انگیز</string>
    <string name="usedBid">تعداد بید پیشنهاد شده</string>
    <string name="specialPrice">قیمت شگفت انگیز</string>
</resources>