<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:background="@color/metalic"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="60dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/warning" />

        <TextView
            android:id="@+id/nbT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/updateText"
            android:textColor="@color/white"


            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/bsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="15dp"

            >

            <Button
                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buyBid"
                android:textSize="14sp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>